@@ -91,6 +91,8 @@ version 2.5.0:
     'oar_sched_gantt_with_timesharing_and_fairsharing' and the following values
     has been set in oar.conf: SCHEDULER_TIMEOUT to 30, SCHEDULER_NB_PROCESSES to 4
     and SCHEDULER_FAIRSHARING_MAX_JOB_PER_USER to 30
+  - Add a limitation on the number of concurrent bipbip processes on the server
+    (for detached jobs).
 
 version 2.4.4:
 --------------
